
[TestFunctionTypes/simple_function - 1]
&dts_parser.FunctionType{
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 2,
        span: 1:7-1:11,
    },
    span: 1:1-1:11,
}
---

[TestFunctionTypes/with_single_param - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:5-1:11,
            },
            span: 1:2-1:11,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 6,
        span: 1:16-1:22,
    },
    span: 1:1-1:22,
}
---

[TestFunctionTypes/with_multiple_params - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:5-1:11,
            },
            span: 1:2-1:11,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 1:13-1:14,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:16-1:22,
            },
            span: 1:13-1:22,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 8,
        span: 1:27-1:34,
    },
    span: 1:1-1:34,
}
---

[TestFunctionTypes/with_optional_param - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:6-1:12,
            },
            Optional: true,
            span: 1:2-1:12,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 6,
        span: 1:17-1:23,
    },
    span: 1:1-1:23,
}
---

[TestFunctionTypes/with_rest_param - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "args",
                span: 1:5-1:9,
            },
            Type: &dts_parser.ArrayType{
                ElementType: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:11-1:17,
                },
                span: 1:11-1:19,
            },
            Rest: true,
            span: 1:2-1:19,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 2,
        span: 1:24-1:28,
    },
    span: 1:1-1:28,
}
---

[TestFunctionTypes/mixed_params - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:5-1:11,
            },
            span: 1:2-1:11,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 1:13-1:14,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:17-1:23,
            },
            Optional: true,
            span: 1:13-1:23,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "rest",
                span: 1:28-1:32,
            },
            Type: &dts_parser.ArrayType{
                ElementType: &dts_parser.PrimitiveType{
                    span: 1:34-1:37,
                },
                span: 1:34-1:39,
            },
            Rest: true,
            span: 1:25-1:39,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 2,
        span: 1:44-1:48,
    },
    span: 1:1-1:48,
}
---

[TestFunctionTypes/return_function - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:5-1:11,
            },
            span: 1:2-1:11,
        },
    },
    ReturnType: &dts_parser.FunctionType{
        Params: []*dts_parser.Param{
            &dts_parser.Param{
                Name: &dts_parser.Ident{
                    Name: "y",
                    span: 1:17-1:18,
                },
                Type: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:20-1:26,
                },
                span: 1:17-1:26,
            },
        },
        ReturnType: &dts_parser.PrimitiveType{
            Kind: 8,
            span: 1:31-1:38,
        },
        span: 1:16-1:38,
    },
    span: 1:1-1:38,
}
---

[TestFunctionTypes/nested_in_union - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:1-1:7,
        },
        &dts_parser.ParenthesizedType{
            Type: &dts_parser.FunctionType{
                Params: []*dts_parser.Param{
                    &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "x",
                            span: 1:12-1:13,
                        },
                        Type: &dts_parser.PrimitiveType{
                            Kind: 7,
                            span: 1:15-1:21,
                        },
                        span: 1:12-1:21,
                    },
                },
                ReturnType: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:26-1:32,
                },
                span: 1:11-1:32,
            },
            span: 1:10-1:33,
        },
    },
    span: 1:1-1:33,
}
---

[TestFunctionTypesWithTypeParams/single_type_param - 1]
&dts_parser.FunctionType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 1:2-1:3,
            },
            span: 1:2-1:3,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:5-1:6,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 1:8-1:9,
                },
                span: 1:8-1:9,
            },
            span: 1:5-1:9,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "T",
            span: 1:14-1:15,
        },
        span: 1:14-1:15,
    },
    span: 1:1-1:15,
}
---

[TestFunctionTypesWithTypeParams/multiple_type_params - 1]
&dts_parser.FunctionType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 1:2-1:3,
            },
            span: 1:2-1:3,
        },
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "U",
                span: 1:5-1:6,
            },
            span: 1:5-1:6,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:8-1:9,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 1:11-1:12,
                },
                span: 1:11-1:12,
            },
            span: 1:8-1:12,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 1:14-1:15,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "U",
                    span: 1:17-1:18,
                },
                span: 1:17-1:18,
            },
            span: 1:14-1:18,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "T",
            span: 1:23-1:24,
        },
        span: 1:23-1:24,
    },
    span: 1:1-1:24,
}
---

[TestFunctionTypesWithTypeParams/with_constraint - 1]
&dts_parser.FunctionType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 1:2-1:3,
            },
            Constraint: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:12-1:18,
            },
            span: 1:2-1:18,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:20-1:21,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 1:23-1:24,
                },
                span: 1:23-1:24,
            },
            span: 1:20-1:24,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "T",
            span: 1:29-1:30,
        },
        span: 1:29-1:30,
    },
    span: 1:1-1:30,
}
---

[TestFunctionTypesWithTypeParams/with_default - 1]
&dts_parser.FunctionType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 1:2-1:3,
            },
            Default: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:6-1:12,
            },
            span: 1:2-1:12,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:14-1:15,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 1:17-1:18,
                },
                span: 1:17-1:18,
            },
            span: 1:14-1:18,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "T",
            span: 1:23-1:24,
        },
        span: 1:23-1:24,
    },
    span: 1:1-1:24,
}
---

[TestFunctionTypesWithTypeParams/constraint_and_default - 1]
&dts_parser.FunctionType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 1:2-1:3,
            },
            Constraint: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:12-1:18,
            },
            Default: &dts_parser.LiteralType{
                Literal: &dts_parser.StringLiteral{
                    Value: "hello",
                    span: 1:21-1:28,
                },
                span: 1:21-1:28,
            },
            span: 1:2-1:28,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:30-1:31,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 1:33-1:34,
                },
                span: 1:33-1:34,
            },
            span: 1:30-1:34,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "T",
            span: 1:39-1:40,
        },
        span: 1:39-1:40,
    },
    span: 1:1-1:40,
}
---

[TestFunctionTypesWithTypeParams/multiple_with_constraints - 1]
&dts_parser.FunctionType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 1:2-1:3,
            },
            Constraint: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:12-1:18,
            },
            span: 1:2-1:18,
        },
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "U",
                span: 1:20-1:21,
            },
            Constraint: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:30-1:36,
            },
            span: 1:20-1:36,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:38-1:39,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 1:41-1:42,
                },
                span: 1:41-1:42,
            },
            span: 1:38-1:42,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 1:44-1:45,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "U",
                    span: 1:47-1:48,
                },
                span: 1:47-1:48,
            },
            span: 1:44-1:48,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "T",
            span: 1:53-1:54,
        },
        span: 1:53-1:54,
    },
    span: 1:1-1:54,
}
---

[TestConstructorTypes/simple_constructor - 1]
&dts_parser.ConstructorType{
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "Object",
            span: 1:11-1:17,
        },
        span: 1:11-1:17,
    },
    span: 1:1-1:17,
}
---

[TestConstructorTypes/with_params - 1]
&dts_parser.ConstructorType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:6-1:7,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:9-1:15,
            },
            span: 1:6-1:15,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 1:17-1:18,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:20-1:26,
            },
            span: 1:17-1:26,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "MyClass",
            span: 1:31-1:38,
        },
        span: 1:31-1:38,
    },
    span: 1:1-1:38,
}
---

[TestConstructorTypes/with_type_params - 1]
&dts_parser.ConstructorType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 1:6-1:7,
            },
            span: 1:6-1:7,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:9-1:10,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 1:12-1:13,
                },
                span: 1:12-1:13,
            },
            span: 1:9-1:13,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "MyClass",
            span: 1:18-1:25,
        },
        TypeArgs: []dts_parser.TypeAnn{
            &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 1:26-1:27,
                },
                span: 1:26-1:27,
            },
        },
        span: 1:18-1:28,
    },
    span: 1:1-1:28,
}
---

[TestConstructorTypes/with_optional_param - 1]
&dts_parser.ConstructorType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:6-1:7,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:10-1:16,
            },
            Optional: true,
            span: 1:6-1:16,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "MyClass",
            span: 1:21-1:28,
        },
        span: 1:21-1:28,
    },
    span: 1:1-1:28,
}
---

[TestConstructorTypes/complex - 1]
&dts_parser.ConstructorType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 1:6-1:7,
            },
            Constraint: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Base",
                    span: 1:16-1:20,
                },
                span: 1:16-1:20,
            },
            span: 1:6-1:20,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:22-1:23,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 1:25-1:26,
                },
                span: 1:25-1:26,
            },
            span: 1:22-1:26,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "y",
                span: 1:28-1:29,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:32-1:38,
            },
            Optional: true,
            span: 1:28-1:38,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "Derived",
            span: 1:43-1:50,
        },
        TypeArgs: []dts_parser.TypeAnn{
            &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 1:51-1:52,
                },
                span: 1:51-1:52,
            },
        },
        span: 1:43-1:53,
    },
    span: 1:1-1:53,
}
---

[TestTypePredicates/simple_predicate - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Type: &dts_parser.PrimitiveType{
                span: 1:5-1:8,
            },
            span: 1:2-1:8,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "x",
            span: 1:13-1:14,
        },
        Type: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:18-1:24,
        },
        span: 1:13-1:24,
    },
    span: 1:1-1:24,
}
---

[TestTypePredicates/with_type_param - 1]
&dts_parser.FunctionType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 1:2-1:3,
            },
            span: 1:2-1:3,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:5-1:6,
            },
            Type: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 1:8-1:9,
                },
                span: 1:8-1:9,
            },
            span: 1:5-1:9,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "x",
            span: 1:14-1:15,
        },
        Type: &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "NonNullable",
                span: 1:19-1:30,
            },
            TypeArgs: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "T",
                        span: 1:31-1:32,
                    },
                    span: 1:31-1:32,
                },
            },
            span: 1:19-1:33,
        },
        span: 1:14-1:33,
    },
    span: 1:1-1:33,
}
---

[TestTypePredicates/asserts_only - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Type: &dts_parser.PrimitiveType{
                span: 1:5-1:8,
            },
            span: 1:2-1:8,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "x",
            span: 1:21-1:22,
        },
        Asserts: true,
        span: 1:13-1:22,
    },
    span: 1:1-1:22,
}
---

[TestTypePredicates/asserts_with_type - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Type: &dts_parser.PrimitiveType{
                span: 1:5-1:8,
            },
            span: 1:2-1:8,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "x",
            span: 1:21-1:22,
        },
        Asserts: true,
        Type: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:26-1:32,
        },
        span: 1:13-1:32,
    },
    span: 1:1-1:32,
}
---

[TestTypePredicates/complex_type - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "value",
                span: 1:2-1:7,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 1,
                span: 1:9-1:16,
            },
            span: 1:2-1:16,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "value",
            span: 1:21-1:26,
        },
        Type: &dts_parser.UnionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:30-1:36,
                },
                &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 1:39-1:45,
                },
            },
            span: 1:30-1:45,
        },
        span: 1:21-1:45,
    },
    span: 1:1-1:45,
}
---

[TestParenthesizedVsFunctionType/parenthesized_type - 1]
&dts_parser.ParenthesizedType{
    Type: &dts_parser.PrimitiveType{
        Kind: 6,
        span: 1:2-1:8,
    },
    span: 1:1-1:9,
}
---

[TestParenthesizedVsFunctionType/parenthesized_union - 1]
&dts_parser.ParenthesizedType{
    Type: &dts_parser.UnionType{
        Types: []dts_parser.TypeAnn{
            &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:2-1:8,
            },
            &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:11-1:17,
            },
        },
        span: 1:2-1:17,
    },
    span: 1:1-1:18,
}
---

[TestParenthesizedVsFunctionType/function_no_params - 1]
&dts_parser.FunctionType{
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 2,
        span: 1:7-1:11,
    },
    span: 1:1-1:11,
}
---

[TestParenthesizedVsFunctionType/function_one_param - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:5-1:11,
            },
            span: 1:2-1:11,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 2,
        span: 1:16-1:20,
    },
    span: 1:1-1:20,
}
---

[TestParenthesizedVsFunctionType/nested_paren - 1]
&dts_parser.ParenthesizedType{
    Type: &dts_parser.ParenthesizedType{
        Type: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:3-1:9,
        },
        span: 1:2-1:10,
    },
    span: 1:1-1:11,
}
---

[TestParenthesizedVsFunctionType/function_returning_function - 1]
&dts_parser.FunctionType{
    ReturnType: &dts_parser.FunctionType{
        ReturnType: &dts_parser.PrimitiveType{
            Kind: 2,
            span: 1:13-1:17,
        },
        span: 1:7-1:17,
    },
    span: 1:1-1:17,
}
---

[TestTypeKeywordsAsIdentifiers/string_param - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "string",
                span: 1:2-1:8,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:10-1:16,
            },
            span: 1:2-1:16,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 7,
        span: 1:21-1:27,
    },
    span: 1:1-1:27,
}
---

[TestTypeKeywordsAsIdentifiers/number_param - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "number",
                span: 1:2-1:8,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:10-1:16,
            },
            span: 1:2-1:16,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 6,
        span: 1:21-1:27,
    },
    span: 1:1-1:27,
}
---

[TestTypeKeywordsAsIdentifiers/boolean_param - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "boolean",
                span: 1:2-1:9,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 8,
                span: 1:11-1:18,
            },
            span: 1:2-1:18,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 2,
        span: 1:23-1:27,
    },
    span: 1:1-1:27,
}
---

[TestTypeKeywordsAsIdentifiers/multiple_type_keywords - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "string",
                span: 1:2-1:8,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:10-1:16,
            },
            span: 1:2-1:16,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "number",
                span: 1:18-1:24,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:26-1:32,
            },
            span: 1:18-1:32,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "boolean",
                span: 1:34-1:41,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 8,
                span: 1:43-1:50,
            },
            span: 1:34-1:50,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 2,
        span: 1:55-1:59,
    },
    span: 1:1-1:59,
}
---

[TestTypeKeywordsAsIdentifiers/mixed_with_regular - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "value",
                span: 1:2-1:7,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:9-1:15,
            },
            span: 1:2-1:15,
        },
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "number",
                span: 1:17-1:23,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:25-1:31,
            },
            span: 1:17-1:31,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 8,
        span: 1:36-1:43,
    },
    span: 1:1-1:43,
}
---

[TestTypeKeywordsAsIdentifiers/type_predicate_with_type_keyword - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "string",
                span: 1:2-1:8,
            },
            Type: &dts_parser.PrimitiveType{
                span: 1:10-1:13,
            },
            span: 1:2-1:13,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "string",
            span: 1:18-1:24,
        },
        Type: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:28-1:34,
        },
        span: 1:18-1:34,
    },
    span: 1:1-1:34,
}
---

[TestTypeKeywordsAsIdentifiers/asserts_with_type_keyword - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "number",
                span: 1:2-1:8,
            },
            Type: &dts_parser.PrimitiveType{
                span: 1:10-1:13,
            },
            span: 1:2-1:13,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "number",
            span: 1:26-1:32,
        },
        Asserts: true,
        span: 1:18-1:32,
    },
    span: 1:1-1:32,
}
---

[TestTypeKeywordsAsIdentifiers/asserts_with_type_and_keyword - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "boolean",
                span: 1:2-1:9,
            },
            Type: &dts_parser.PrimitiveType{
                span: 1:11-1:14,
            },
            span: 1:2-1:14,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "boolean",
            span: 1:27-1:34,
        },
        Asserts: true,
        Type: &dts_parser.PrimitiveType{
            Kind: 8,
            span: 1:38-1:45,
        },
        span: 1:19-1:45,
    },
    span: 1:1-1:45,
}
---

[TestTypeKeywordsAsIdentifiers/bigint_param - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "bigint",
                span: 1:2-1:8,
            },
            Type: &dts_parser.PrimitiveType{
                Kind: 9,
                span: 1:10-1:16,
            },
            span: 1:2-1:16,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        Kind: 6,
        span: 1:21-1:27,
    },
    span: 1:1-1:27,
}
---

[TestTypePredicates/this_is_predicate - 1]
&dts_parser.FunctionType{
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "x",
                span: 1:2-1:3,
            },
            Type: &dts_parser.PrimitiveType{
                span: 1:5-1:8,
            },
            span: 1:2-1:8,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "this",
            span: 1:13-1:17,
        },
        Type: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:21-1:27,
        },
        span: 1:13-1:27,
    },
    span: 1:1-1:27,
}
---

[TestTypePredicates/this_is_readonly_array - 1]
&dts_parser.FunctionType{
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "S",
                span: 1:2-1:3,
            },
            Constraint: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "T",
                    span: 1:12-1:13,
                },
                span: 1:12-1:13,
            },
            span: 1:2-1:13,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "predicate",
                span: 1:15-1:24,
            },
            Type: &dts_parser.FunctionType{
                Params: []*dts_parser.Param{
                    &dts_parser.Param{
                        Name: &dts_parser.Ident{
                            Name: "value",
                            span: 1:27-1:32,
                        },
                        Type: &dts_parser.TypeReference{
                            Name: &dts_parser.Ident{
                                Name: "T",
                                span: 1:34-1:35,
                            },
                            span: 1:34-1:35,
                        },
                        span: 1:27-1:35,
                    },
                },
                ReturnType: &dts_parser.TypePredicate{
                    ParamName: &dts_parser.Ident{
                        Name: "value",
                        span: 1:40-1:45,
                    },
                    Type: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "S",
                            span: 1:49-1:50,
                        },
                        span: 1:49-1:50,
                    },
                    span: 1:40-1:50,
                },
                span: 1:26-1:50,
            },
            span: 1:15-1:50,
        },
    },
    ReturnType: &dts_parser.TypePredicate{
        ParamName: &dts_parser.Ident{
            Name: "this",
            span: 1:55-1:59,
        },
        Type: &dts_parser.ArrayType{
            ElementType: &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "S",
                    span: 1:72-1:73,
                },
                span: 1:72-1:73,
            },
            Readonly: true,
            span: 1:63-1:75,
        },
        span: 1:55-1:75,
    },
    span: 1:1-1:75,
}
---

[TestMethodSignatureWithTypePredicate/lib.es5.d.ts_line_1242_-_every_method - 1]
&dts_parser.ObjectType{
    Members: []dts_parser.InterfaceMember{
        &dts_parser.MethodSignature{
            Name: &dts_parser.Ident{
                Name: "every",
                span: 1:3-1:8,
            },
            TypeParams: []*dts_parser.TypeParam{
                &dts_parser.TypeParam{
                    Name: &dts_parser.Ident{
                        Name: "S",
                        span: 1:9-1:10,
                    },
                    Constraint: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "T",
                            span: 1:19-1:20,
                        },
                        span: 1:19-1:20,
                    },
                    span: 1:9-1:20,
                },
            },
            Params: []*dts_parser.Param{
                &dts_parser.Param{
                    Name: &dts_parser.Ident{
                        Name: "predicate",
                        span: 1:22-1:31,
                    },
                    Type: &dts_parser.FunctionType{
                        Params: []*dts_parser.Param{
                            &dts_parser.Param{
                                Name: &dts_parser.Ident{
                                    Name: "value",
                                    span: 1:34-1:39,
                                },
                                Type: &dts_parser.TypeReference{
                                    Name: &dts_parser.Ident{
                                        Name: "T",
                                        span: 1:41-1:42,
                                    },
                                    span: 1:41-1:42,
                                },
                                span: 1:34-1:42,
                            },
                            &dts_parser.Param{
                                Name: &dts_parser.Ident{
                                    Name: "index",
                                    span: 1:44-1:49,
                                },
                                Type: &dts_parser.PrimitiveType{
                                    Kind: 7,
                                    span: 1:51-1:57,
                                },
                                span: 1:44-1:57,
                            },
                            &dts_parser.Param{
                                Name: &dts_parser.Ident{
                                    Name: "array",
                                    span: 1:59-1:64,
                                },
                                Type: &dts_parser.ArrayType{
                                    ElementType: &dts_parser.TypeReference{
                                        Name: &dts_parser.Ident{
                                            Name: "T",
                                            span: 1:75-1:76,
                                        },
                                        span: 1:75-1:76,
                                    },
                                    Readonly: true,
                                    span: 1:66-1:78,
                                },
                                span: 1:59-1:78,
                            },
                        },
                        ReturnType: &dts_parser.TypePredicate{
                            ParamName: &dts_parser.Ident{
                                Name: "value",
                                span: 1:83-1:88,
                            },
                            Type: &dts_parser.TypeReference{
                                Name: &dts_parser.Ident{
                                    Name: "S",
                                    span: 1:92-1:93,
                                },
                                span: 1:92-1:93,
                            },
                            span: 1:83-1:93,
                        },
                        span: 1:33-1:93,
                    },
                    span: 1:22-1:93,
                },
                &dts_parser.Param{
                    Name: &dts_parser.Ident{
                        Name: "thisArg",
                        span: 1:95-1:102,
                    },
                    Type: &dts_parser.PrimitiveType{
                        span: 1:105-1:108,
                    },
                    Optional: true,
                    span: 1:95-1:108,
                },
            },
            ReturnType: &dts_parser.TypePredicate{
                ParamName: &dts_parser.Ident{
                    Name: "this",
                    span: 1:111-1:115,
                },
                Type: &dts_parser.ArrayType{
                    ElementType: &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "S",
                            span: 1:128-1:129,
                        },
                        span: 1:128-1:129,
                    },
                    Readonly: true,
                    span: 1:119-1:131,
                },
                span: 1:111-1:131,
            },
            span: 1:3-1:131,
        },
    },
    span: 1:1-1:133,
}
---

[TestMethodSignatureWithTypePredicate/simple_method_with_type_predicate - 1]
&dts_parser.ObjectType{
    Members: []dts_parser.InterfaceMember{
        &dts_parser.MethodSignature{
            Name: &dts_parser.Ident{
                Name: "isString",
                span: 1:3-1:11,
            },
            Params: []*dts_parser.Param{
                &dts_parser.Param{
                    Name: &dts_parser.Ident{
                        Name: "x",
                        span: 1:12-1:13,
                    },
                    Type: &dts_parser.PrimitiveType{
                        span: 1:15-1:18,
                    },
                    span: 1:12-1:18,
                },
            },
            ReturnType: &dts_parser.TypePredicate{
                ParamName: &dts_parser.Ident{
                    Name: "x",
                    span: 1:21-1:22,
                },
                Type: &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:26-1:32,
                },
                span: 1:21-1:32,
            },
            span: 1:3-1:32,
        },
    },
    span: 1:1-1:34,
}
---

[TestMethodSignatureWithTypePredicate/method_with_this_predicate - 1]
&dts_parser.ObjectType{
    Members: []dts_parser.InterfaceMember{
        &dts_parser.MethodSignature{
            Name: &dts_parser.Ident{
                Name: "check",
                span: 1:3-1:8,
            },
            ReturnType: &dts_parser.TypePredicate{
                ParamName: &dts_parser.Ident{
                    Name: "this",
                    span: 1:12-1:16,
                },
                Type: &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "NonNullable",
                        span: 1:20-1:31,
                    },
                    TypeArgs: []dts_parser.TypeAnn{
                        &dts_parser.ThisType{
                            span: 1:32-1:36,
                        },
                    },
                    span: 1:20-1:37,
                },
                span: 1:12-1:37,
            },
            span: 1:3-1:37,
        },
    },
    span: 1:1-1:39,
}
---

[TestConstructorTypes/abstract_constructor - 1]
&dts_parser.ConstructorType{
    Abstract: true,
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "Object",
            span: 1:20-1:26,
        },
        span: 1:20-1:26,
    },
    span: 1:1-1:26,
}
---

[TestConstructorTypes/abstract_with_params - 1]
&dts_parser.ConstructorType{
    Abstract: true,
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "args",
                span: 1:18-1:22,
            },
            Type: &dts_parser.PrimitiveType{
                span: 1:24-1:27,
            },
            Rest: true,
            span: 1:15-1:27,
        },
    },
    ReturnType: &dts_parser.PrimitiveType{
        span: 1:32-1:35,
    },
    span: 1:1-1:35,
}
---

[TestConstructorTypes/abstract_with_type_params - 1]
&dts_parser.ConstructorType{
    Abstract: true,
    TypeParams: []*dts_parser.TypeParam{
        &dts_parser.TypeParam{
            Name: &dts_parser.Ident{
                Name: "T",
                span: 1:15-1:16,
            },
            span: 1:15-1:16,
        },
    },
    Params: []*dts_parser.Param{
        &dts_parser.Param{
            Name: &dts_parser.Ident{
                Name: "args",
                span: 1:21-1:25,
            },
            Type: &dts_parser.PrimitiveType{
                span: 1:27-1:30,
            },
            Rest: true,
            span: 1:18-1:30,
        },
    },
    ReturnType: &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "T",
            span: 1:35-1:36,
        },
        span: 1:35-1:36,
    },
    span: 1:1-1:36,
}
---
